# CodeChat

./: .gitattributes  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md
.claude/: settings.local.json
.github/workflows/: test-and-build.yml
daemon/: pyproject.toml
daemon/codechat/: cli.py  config.py  dep_graph.py  errors.py  indexer.py  llm_router.py  logging.py  models.py  prompt.py  server.py  vector_db.py  watcher.py
daemon/codechat/providers/: __init__.py  anthropic.py  azure.py  google.py  openai.py
daemon/tests/integration/: test_server_endpoints.py
daemon/tests/unit/: test_dep_graph.py  test_prompt_manager.py
docs/: InstallingRunCodeChat.md  NoDockerDesktopSetup.md  RunningAutomationTests.md  VS-Code-Extension.md
docs/analysis/: potential_live_call_chain_generation.md
httptest/: depgraph.http  tests.http
scripts/: dev.ps1
scripts/install/: install-codechat-wsl.ps1  install-codechat.ps1  install-codechat.sh
vscode-extension/CodeChat/: CHANGELOG.md  README.md  codechat-0.0.1.vsix  jest.config.js  package-lock.json  package.json  tsconfig.json
vscode-extension/CodeChat/src/: extension.ts
