[tool.poetry]
name = "codechat-daemon"
version = "0.1.0"
description = "The CodeChat indexing + serving daemon"
authors = ["Dion van Huyssteen <dion@darkervision.com>"]
# where to find your package code
packages = [
  { include = "codechat" }
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1"
watchdog = "^2.1"
faiss-cpu = "1.8.*"
networkx = "^2.8"
fastapi = "^0.95"
uvicorn = "^0.22"
openai = "1.75.0"
anthropic = "0.49.0"
google-genai="1.11.0"

[tool.poetry.scripts]
codechat = "codechat.cli:main"

[tool.poetry.dev-dependencies]
pytest = "^7.4"

[build-system]
requires = ["poetry-core>=1.7.1"]
build-backend = "poetry.core.masonry.api"
