[tool.poetry]
name = "codechat-daemon"
version = "0.1.0"
description = "The CodeChat indexing + serving daemon"
authors = ["Dion van Huyssteen <dion@darkervision.com>"]
# where to find your package code
packages = [
  { include = "codechat" }
]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1"
watchdog = "^6.0"
faiss-cpu = "^1.10"
networkx = "^3.4"
fastapi = "^0.115"
uvicorn = "^0.34"
openai = "^1.75"
anthropic = "^0.49"
google-genai="^1.11"
tree-sitter="^0.24"
tree_sitter_languages="^1.10"

[tool.poetry.scripts]
codechat = "codechat.cli:main"

[tool.poetry.dev-dependencies]
pytest = "^7.4"

[build-system]
requires = ["poetry-core>=1.7.1"]
build-backend = "poetry.core.masonry.api"
